styles/styles.css
/**************** Universal styles *********/
* {
  box-sizing: border-box;
}

html, body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  font-family: 'Indie Flower', cursive;
  color: #FFFFFF;
  font-weight: bold;
}

.wrap {
  height: 100%;
  width: 100%;
  position: relative;
  text-align: center;
  font-size: 2rem;
  overflow: visible;
}

.vertical-container {
  display: flex;
  flex-direction: column;
}

/************ Typography ***********************/
header label {
  cursor: pointer;
  display: inline-block;
  padding-left: 2rem;
  margin-top: 1rem;
  font-size: 1.7rem;
}

header label:hover {
  transform: scale(1.15);
}

.active {
  color: #000;
}


h1 {
  font-size: 3rem;
  margin: 0 auto;
  margin-bottom: 0.7rem;
}

h2 {
  font-size: 2.5rem;
  margin: 0 auto;
  margin-top: 1rem;
  text-decoration: underline;
}

h4 {
  font-size: 80%;
  color: red;
  position: absolute;
  top: 40%;
}

.bio p {
  font-size: 1.8rem;
}

p {
    font-size: 2rem;
    margin-right: 1rem;
    margin-left: 1rem;
}


.icons-credits p {
  color: #000;
  font-size: 0.9rem;
  margin-left: 0.5rem;
}

/************ Layout ************************/
/*** Header ****/
.languages {
  display: flex;
}

.languages img {
  margin-top: 17px;
  margin-right: 5px;
}

.languages img:hover {
  transform: rotate(15deg);
}

header {
  display: flex;
  justify-content: space-between;
  position: absolute;
  top: 0;
  left: 0;
  z-index:101;
  width: 100%;
}


/************* Main *************/
  #main-div {
    justify-content: center;
    position: relative;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-image: url("https://raw.githubusercontent.com/enamarat/enamarat.github.io/master/public/rsz_img_0194.jpg");
  }

  /********** Portfolio *****/
  #portfolio-div {
    display: none;
    position: relative;
    width: 100%;
    min-height: 100vh;
    background-size: cover;
    background-attachment: fixed;
    background-image: url("https://raw.githubusercontent.com/enamarat/enamarat.github.io/master/public/rsz_img_0195.jpg");
  }

  .gallery {
    align-items: center;
    width: 100%;
    padding-top: 2rem;
    padding-left: 2rem;
    padding-right: 2rem;
  }

  .collection {
    width: 100%;
    align-items: center;
  }

  .gallery h1 {
    margin-top: 2rem;
    margin-bottom: 2rem;
    color: #000;
  }

  .portfolio-item  {
    width: 60%;
    opacity: 0.7;
    margin-top: 0.5rem;
  }

  .image {
    width: 100%;
    overflow: hidden;
  }

  .portfolio-item .image img {
    width: 100%;
  }

  .portfolio-item:last-child {
    margin-bottom: 2rem;
  }
  
  .opposite-side {
    display: none;
  }


  /************* About me ********/
  #about-div {
    display: none;
    position: relative;
    width: 100%;
    min-height: 100vh;
    background-size: cover;
    background-attachment: fixed;
    background-image: url("https://raw.githubusercontent.com/enamarat/enamarat.github.io/master/public/rsz_img_0190.jpg");
  }

  .bio {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 4rem;
  }

  .inner-bio {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .text {
    width: 60%;
    background-color: rgba(26, 139, 237, 0.5);
  }

  .photo {
    width: 60%;
    margin-top: 1rem;
    margin-bottom: 0.5rem;
  }

  #photo {
    max-width: 90%;
    margin-right: 10px;
    margin-left: 20px;
    border: 5px solid #FFF;
  }

  #twitter:hover {
    transform: rotate(36deg);
  }


/****** Media queries *******/
@media screen and (min-width: 769px) {
  /**** Portfolio ****/
  .collection {
    display: flex;
    flex-direction: row;
  }

  .portfolio-item {
    margin-right: 0.5rem;
  }

  .portfolio-item:last-child {
    margin-right: 0;
    margin-bottom: 0;
  }

  /******** About me ***********/
  .inner-bio {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
  }

  .photo {
    width: 50%;
    margin-top: 0;
  }

  .text {
    width: 50%;
    margin-left: 2rem;
    margin-bottom: 1rem;
  }


}

@media screen and (max-width: 1024px) {
  /**** Portfolio ****/
    .portfolio-item .image img {
      width: 100%;
      transition: transform 1.25s;
    }

    .portfolio-item  img:hover {
      transform: scale(1.65);
      }
}


@media screen and (min-width: 1150px) {

  /*** About me ***/
  .photo {
    width: 40%;
  }

  .text {
    width: 60%;
  }

}

